--- a/notes/2022-11-14.md
+++ b/notes/2022-11-14.md
@@ -44,7 +44,7 @@ from sklearn import model_selection as ms
 
 We'll use the iris data again.
 
-Remember, we need to split the data into training and test.  The cross validation step will hep us optimize the parameters, but we don't want *data leakage* where the model has seen the test data multiple times. So, we split the data here for train and test annd the cross validation splits the training data into train and "test" again, but this test is better termed validation.
+Remember, we need to split the data into training and test.  The cross validation step will help us optimize the parameters, but we don't want *data leakage* where the model has seen the test data multiple times. So, we split the data here for train and test annd the cross validation splits the training data into train and "test" again, but this test is better termed validation.
 
 
 ```{code-cell} ipython3
